# openhands-v1

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/: collapse_cobertura.py
.github/workflows/: precommit.yml  tests.yml
.openhands/: TASKS.md  setup.sh
.openhands/microagents/: repo.md
examples/: confirmation.py  hello_world.py  hello_world_with_persistence.py
openhands/: __init__.py
openhands/core/: __init__.py  logger.py  pyproject.toml  tool.py
openhands/core/agent/: __init__.py  base.py
openhands/core/agent/codeact_agent/: codeact_agent.py
openhands/core/agenthub/: __init__.py  agent.py  history.py
openhands/core/agenthub/codeact_agent/: __init__.py  codeact_agent.py
openhands/core/config/: __init__.py  llm_config.py  mcp_config.py  openhands_config.py
openhands/core/context/: README.md  __init__.py  env_context.py  manager.py  message_context.py  prompt.py
openhands/core/context/microagents/: microagent.py
openhands/core/conversation/: __init__.py  conversation.py  persistence.py  state.py  types.py  visualizer.py
openhands/core/event/: __init__.py  base.py  llm_convertible.py  types.py
openhands/core/io/: __init__.py  local.py  local_fs.py  s3.py  typing.py
openhands/core/llm/: __init__.py  exceptions.py  llm.py  message.py  metadata.py
openhands/core/llm/utils/: fn_call_converter.py  model_features.py  retry_mixin.py
openhands/core/microagents/: __init__.py  exceptions.py  microagent.py  types.py
openhands/core/runtime/: __init__.py  schema.py  security.py  tool.py
openhands/core/runtime/tools/: __init__.py
openhands/core/runtime/tools/execute_bash/: __init__.py  bash_session.py  constants.py  definition.py  impl.py  metadata.py
openhands/core/runtime/tools/execute_bash/utils/: bash.py  command.py
openhands/core/runtime/tools/finish/: __init__.py  definition.py
openhands/core/runtime/tools/str_replace_editor/: __init__.py  definition.py  editor.py  exceptions.py  impl.py
openhands/core/runtime/tools/str_replace_editor/utils/: encoding.py  file_cache.py  history.py  prompts.py  shell.py  truncate.py
openhands/core/tests/: test_tool.py
openhands/core/tests/conversation/: test_persistence.py
openhands/core/tests/tool/: test_builtins.py
openhands/core/tool/: __init__.py  builtin_tools.py  schema.py
openhands/core/tool/builtins/: __init__.py  finish.py
openhands/core/utils/: json.py  prompt.py
openhands/runtime/: __init__.py  schema.py  tool.py
openhands/runtime/tools/: str_replace_editor.py
openhands/tools/: __init__.py  pyproject.toml
openhands/tools/execute_bash/: bash_session.py  definition.py  impl.py
openhands/tools/str_replace_editor/: __init__.py  definition.py  exceptions.py  impl.py
openhands/tools/tests/execute_bash/: conftest.py  test_bash_parsing.py  test_bash_ps1_metadata.py
openhands/tools/tests/str_replace_editor/: conftest.py  test_error_handling.py  test_exceptions.py  test_file_validation.py  test_memory_usage.py  test_view_supported_binary_files.py
openhands/tools/tests/str_replace_editor/utils/: test_encoding.py  test_file_cache.py  test_history.py  test_shell_utils.py
tests/: test_hello_world_integration.py  test_oh_editor.py  test_ruff_config.py  test_str_replace_editor_tool.py
tests/core/: test_logger.py  test_tool.py
tests/core/runtime/: test_tool.py
tests/core/runtime/tools/execute_bash/: conftest.py  test_bash_parsing.py  test_bash_ps1_metadata.py  test_bash_session.py
tests/core/runtime/tools/str_replace_editor/: conftest.py  test_basic_operations.py  test_encoding.py  test_error_handling.py  test_exceptions.py  test_file_validation copy.py  test_file_validation.py  test_memory_usage.py  test_oh_editor.py  test_view_supported_binary_files.py  test_workspace_root.py
tests/core/runtime/tools/str_replace_editor/utils/: test_encoding.py  test_file_cache.py  test_history.py  test_shell_utils.py
tests/sdk/: test_tool.py
tests/tools/execute_bash/: conftest.py  test_bash_session.py
tests/tools/str_replace_editor/: test_basic_operations.py  test_workspace_root.py
