[project]
name = "openhands-ai"
version = "1.0.0"
description = "OpenHands: Code Less, Make More"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bashlex>=0.18",
    "binaryornot>=0.4.4",
    "cachetools>=6.1.0",
    "fastmcp>=2.11.3",
    "json-repair>=0.50.0",
    "libtmux>=0.46.2",
    "litellm>=1.75.9",
    "pydantic>=2.11.7",
    "python-frontmatter>=1.1.0",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "psutil>=7.0.0",
    "pyright>=1.1.404",
    "pytest>=8.4.1",
    "pytest-cov>=5.0.0",
    "ruff>=0.12.10",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
