[project]
name = "openhands-sdk"
version = "1.0.0"
description = "OpenHands: Code Less, Make More"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bashlex>=0.18",  # TODO: move these to separate runtime projects
    "binaryornot>=0.4.4",  # TODO: move these to separate runtime projects
    "cachetools>=6.1.0",  # TODO: move these to separate runtime projects
    "fastmcp>=2.11.3",
    "libtmux>=0.46.2",  # TODO: move these to separate runtime projects
    "litellm>=1.75.9",
    "pydantic>=2.11.7",
    "python-frontmatter>=1.1.0",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "psutil>=7.0.0",
    "pyright>=1.1.404",
    "pytest>=8.4.1",
    "pytest-cov>=5.0.0",
    "ruff>=0.12.10",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

# Ruff configuration
[tool.ruff]
target-version = "py312"
line-length = 500

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["openhands"]
combine-as-imports = true
force-single-line = false
lines-after-imports = 2
