[project]
name = "openhands-tools"
version = "1.0.0"
description = "OpenHands Tools - Runtime tools for AI agents"

requires-python = ">=3.12"
dependencies = [
    "openhands-sdk",
    "bashlex>=0.18",
    "binaryornot>=0.4.4",
    "cachetools>=6.1.0",
    "libtmux>=0.46.2",
    "pydantic>=2.11.7",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["../.."]
include = ["openhands*"]

